@@ -1,5 +1,9 @@
 2013-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* close old PG log file, when changing it
+
+2013-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* update doc
 
 2013-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>
